--- a/css/index.css
+++ b/css/index.css
@@ -71,3 +71,8 @@ body,html{
 	position: relative;
 	display: none;
 }
+#Stats-output{
+	-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;
+	-webkit-touch-callout: none;
+	pointer-events: none;
+}
